flux/apps/base/teslamate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: teslamate
  labels:
    app.kubernetes.io/name: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: teslamate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teslamate
    spec:
      containers:
      - name: teslamate
        image: teslamate/teslamate:4.0
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: teslamate-import
          mountPath: /opt/app/import
      - name: postgres
        image: postgres:17-trixie
        volumeMounts:
        - name: teslamate-data
          mountPath: /var/lib/postgresql/data
      - name: grafana
        image: teslamate/grafana:2.1
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: teslamate-grafana
          mountPath: /var/lib/grafana
      volumes:
      - name: teslamate-import
        persistentVolumeClaim:
          claimName: teslamate-import
      - name: teslamate-data
        persistentVolumeClaim:
          claimName: teslamate-data
      - name: teslamate-grafana
        persistentVolumeClaim:
          claimName: teslamate-grafana
