flux/apps/base/teslamate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: teslamate
spec:
  selector:
    app.kubernetes.io/name: teslamate
  ports:
  - name: teslamate
    port: 4000
    targetPort: 4000
