flux/apps/base/teslamate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  namespace: teslamate
spec:
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: teslamate
spec:
  ingressClassName: nginx
